--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <section class="content">
                     <header class="header">
                         <div class="h-left">
-                            <img class="h-logo" src="img/logo_only.png" alt="Logo">
+                            <img class="h-logo" src="img/logo_large.png" alt="Logo">
                         </div>
                         <div class="h-right">
                             <h3>coming soon!</h3>
