--- a/index.html
+++ b/index.html
@@ -66,10 +66,7 @@
         <div class="pane-when " id="s-when">
             <div class="content">
                 <div class="clock clock-countdown">
-                    <div class="site-config"
-                         data-date="05/30/2017 00:00:00" 
-                         data-date-timezone="+8"
-                         ></div>                    
+                    <div class="site-config" data-date="06/17/2017 00:00:00" data-date-timezone="+8"></div>
                     <div class="elem-center">
                         <div class="digit">
                             <span class="days"></span>
