--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <script src="./js/vendor/modernizr-2.7.1.min.js"></script>
     </head>
     <body id="menu" class="alt-bg">
+        <div class="redirect ease"><p>This page will be redirect to the old website of<br>
+            Eastern Communications<br>
+            in <span id="seconds">100</span> seconds.</p></div>
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
