update linked open in new tab

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </main>
         <footer class="page-footer">
             <div>
-                <a href="https://www.linkedin.com/company-beta/2120642/?pathWildcard=2120642"><i class="ion ion-social-linkedin"></i></a>
+                <a href="https://www.linkedin.com/company-beta/2120642/?pathWildcard=2120642" target="_blank"><i class="ion ion-social-linkedin"></i></a>
             </div>
         </footer>
         <script src="./js/vendor/jquery-1.11.2.min.js"></script>
