--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             </ul>
         </nav> -->
         <div class="page-cover" id="s-cover">
-            <div class="cover-bg pos-abs full-size bg-img" data-image-src="img/bg-default.jpg"></div>
-            <div class="cover-bg pos-abs full-size slide-show">
+            <div class="cover-bg pos-abs full-size bg-img" data-image-src="img/main.jpg"></div>
+            <!-- <div class="cover-bg pos-abs full-size slide-show">
                 <i class='img' data-src='./img/bg-slide1.jpg'></i>
                 <i class='img' data-src='./img/bg-slide2.jpg'></i>
                 <i class='img' data-src='./img/bg-slide3.jpg'></i>
                 <i class='img' data-src='./img/bg-slide4.jpg'></i>
-            </div>
+            </div> -->
             <div class="cover-bg-mask pos-abs full-size bg-color" data-bgcolor="rgba(0, 0, 0, 0.41)"></div>
             
         </div>
