--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     </head>
     <body id="menu" class="alt-bg">
         <div class="redirect"><p>This page will redirect to the old website of Eastern Communications in <span id="seconds">10</span> seconds.</p></div>
+        <div id="particles-background" class="vertical-centered-box"></div>
+        <div id="particles-foreground" class="vertical-centered-box"></div>
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -29,10 +31,10 @@
             <div><i class="ion ion-loading-d"></i><p>loading</p></div>
         </div>
         <div class="logo-container">
-            <img class="h-logo" src="img/logo_large.png" alt="Logo">
+            <!-- <img class="h-logo" src="img/logo_large.png" alt="Logo"> -->
         </div>
-        <div class="cover-bg pos-abs full-size bg-img" data-image-src="img/main.jpg"></div>
-        <div class="cover-bg-mask pos-abs full-size bg-color" data-bgcolor="rgba(0, 0, 0, 0.41)"></div>
+        <!-- <div class="cover-bg pos-abs full-size bg-img" data-image-src="img/main.jpg"></div> -->
+        <!-- <div class="cover-bg-mask pos-abs full-size bg-color" data-bgcolor="rgba(0, 0, 0, 0.41)"></div> -->
         <div class="pane-when " id="s-when">
             <div class="content">
                 <div class="clock clock-countdown">
@@ -61,6 +63,7 @@
                     <header class="header">
                         <div class="h-left">
                             <div class="text-slide">
+                                <p><img src="img/logo-color.png" alt=""></p>
                                 <p><img src="img/bridge.png" alt=""></p>
                                 <p><img src="img/connection.png" alt=""></p>
                                 <p><img src="img/link.png" alt=""></p>
