--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="h-right">
                             <h3>coming soon!</h3>
-                            <h4 class="subhead"><a href="https://easterncommunications.com.ph/">Continue to old website</a></h4>
+                            <h4 class="subhead"><a href="https://easterncommunications.com.ph/">Continue to current website</a></h4>
                         </div>
                     </header>
                 </section>
